--- a/meson.build
+++ b/meson.build
@@ -23,8 +23,39 @@ if git.found()
   endif
 endif
 
+message('long: @0@, short: @1@'.format(longver, shortver))
+
 gobject = dependency('gobject-2.0')
 vadi = dependency('vadi-0.0')
+appstream = dependency('appstream')
+gmodule = dependency('gmodule-2.0')
+libtokyo = dependency('tokyo-gtk4', required: false)
+
+ascli = find_program('appstreamcli', required: false)
+
+conf_data = configuration_data()
+conf_data.set('PREFIX', prefix)
+conf_data.set('BINDIR', bindir)
+conf_data.set('DATADIR', datadir)
+conf_data.set('LIBDIR', libdir)
+conf_data.set('LIBEXECDIR', libexecdir)
+conf_data.set('VERSION', longver)
+conf_data.set('BUILDDIR', meson.current_build_dir())
+conf_data.set('SOURCEDIR', meson.current_source_dir())
+conf_data.set('SMALL_VERSION', shortver.split('-')[0])
+conf_data.set('VERSION_MAJOR', shortver.split('-')[0].split('.')[0])
+conf_data.set('VERSION_MINOR', shortver.split('-')[0].split('.')[1])
+conf_data.set('VERSION_PATCH', shortver.split('-')[0].split('.')[2])
+conf_data.set('VERSION_TAG', shortver.strip(shortver.split('-')[0] + '-'))
+
+if target_machine.system() == 'darwin'
+  conf_data.set('MOD_EXT', 'dylib')
+elif target_machine.system() == 'windows'
+  conf_data.set('MOD_EXT', 'dll')
+else
+  conf_data.set('MOD_EXT', 'so')
+endif
 
 subdir('core')
+subdir('platforms')
 subdir('examples')
