--- a/platforms/expidus/meson.build
+++ b/platforms/expidus/meson.build
@@ -1,4 +1,4 @@
-executable('april-launch-expidus', ['src/main.vala', 'src/core/platform.vala', 'src/core/platform/service/application.vala'],
+executable('april-launch-expidus', ['src/main.vala', 'src/core/platform.vala', 'src/core/platform/service/application.vala', 'src/core/platform/service/view.vala'],
   c_args: ['-DG_LOG_DOMAIN="AprilExpidus"'],
   dependencies: [libapril, libtokyo, dependency('libadwaita-1')],
   install: true)
